--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,32 @@
+atpublic==6.0.2
+beautifulsoup4==4.14.2
+certifi==2025.10.5
+charset-normalizer==3.4.3
+greenlet==3.2.4
+ibis-framework==10.8.0
+idna==3.10
 lxml==6.0.2
+markdown-it-py==4.0.0
+mdurl==0.1.2
 numpy==2.3.3
+packaging==25.0
 pandas==2.3.3
+parsy==2.2
+playwright==1.55.0
+pyarrow==21.0.0
+pyarrow-hotfix==0.7
+pyee==13.0.0
+pygments==2.19.2
 python-dateutil==2.9.0.post0
 pytz==2025.2
 pyyaml==6.0.3
+regex==2025.9.18
+requests==2.32.5
+rich==14.2.0
 six==1.17.0
+soupsieve==2.8
+sqlglot==27.25.2
+toolz==1.0.0
+typing-extensions==4.15.0
 tzdata==2025.2
+urllib3==2.5.0
